# RSC

./: README.rst  install_rsc.sh  requirements.txt  setup.cfg
doc/: Plasma_API-v0.4-review.docx  README.md  plasma.conf
doc/source/init/: rsc-api.conf  rsc-controller.conf
doc/source/samples/: plasma-api.conf  plasma-controller.conf
etc/: plasma.conf
etc/rsc/: rsc.conf.sample
plasma/api/api/: app.py
plasma/api/controllers/: types.py
plasma/cmd/: api.py
plasma/common/: exceptions.py  rpc.py  rpc_service.py
plasma/conductor/: .api.py.swp
plasma/controller/: api.py
plasma/controller/handlers/: flavor_controller.py
plasma/tests/: test_functional.py
plasma/ui/: README.md  package.json
plasma/ui/src/: config.js  customized.css  index.html
plasma/ui/src/js/: config.js
rsc/api/: app.py  hooks.py
rsc/api/controllers/: link.py
rsc/api/controllers/v1/: nodes.py
rsc/common/: osinterface.py
rsc/common/redfish/: api.py
rsc/controller/: api.py
rsc/controller/handlers/: node_controller.py
rsc/flavor/: flavor.py  generatorbase.py
rsc/flavor/plugins/: assettag.py
rsc/ui/src/js/: config.js  util.js
source/: chassisTree.html  cleanplasma.sh  plasma-conductor.sh  plasmaconductor.sh  restart.sh
source/config/: README.txt
source/flavor_creator/: README.txt
source/local/: bin  include  lib
source/plasma/: README.rst  requirements.txt
source/plasma/plasma.egg-info/: PKG-INFO  SOURCES.txt
source/plasma/plasma/api/: config.py  hooks.py
source/plasma/plasma/cmd/: conductor.py  (+1 more)
source/podm/: README.txt
valence/common/redfish/: api.py
(+69 files in other folders)
